Update docs.md